--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
       <ul>
        <li>This is some random work branch, not really meant to be pulled into master</li>
-       <li>I'm just trying to see what things would look like with multiple independant branches (i.e. release versions>
+       <li>I'm just trying to see what things would look like with multiple independant branches (i.e. release versions)</li>
+       <li>Some more small changes</li>
       </ul>
   </body>
 </html>
